maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  if (!aMurNord())
  	gauche()
  //marquerCases()
}

def marquerCases()
{
	var (h, l) = (getMondeHauteur(), getMondeLargeur())
  
  
  for(x<- 0 to l-1) //Ces boucles permettent de noter 0 sur la case du Baggle
  {
    for(y<- 0 to h-1)
    {
      if (aBiscuit(x, y))
      {
        setIndication(x, y, 0)
      }
    }
  }
  
  var compteur = 0
  var (xBuggle, yBuggle) = (getX(), getY())
  while(getIndication(xBuggle, yBuggle) == 9999) //Tant que le marquage n'atteint pas le Buggle
  
  {
    for (x<- 0 to l-1) // On boucle sur les cases du Monde
    {
      for (y<- 0 to h-1)
      {
        if (getIndication(x, y) == compteur)
        {
          if (!aMurOuest(x, y))
          	setIndication(x-1, y, compteur + 1)
          
          if (!aMurNord(x, y))
          	setIndication(x, y+1, compteur + 1)
          
          /*if (!aMurSud(x, y))
          	setIndication(x, y-1, compteur + 1)
          
          if (!aMurEst(x, y))
          	setIndication(x+1, y, compteur + 1)*/
        }
      }
    }
    compteur += 1
  }
}
  
  
/*
def aMurEst(x:Int, y:Int)
  {
    var (h, l) = (getMondeHauteur(), getMondeLargeur())
    if (x == l)
    	return true
    else 
    	return aMurOuest(x+1, y)
  }
  
def aMurSud(x:Int, y:Int)
  {
    if (y == 0)
    	return true
    else
    	return aMurNord(x, y-1)
  }*/